--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
   },
   "autoload-dev": {
     "psr-4": {
-      "Eightfold\\Events\\Tests\\": "./tests/"
+      "Eightfold\\Events\\Tests\\": "./tests/",
+      "Eightfold\\Foldable\\Tests\\": "./vendor/8fold/php-foldable/tests/"
     }
   },
   "config": {
