--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "gulp-minify": "^3.1.0",
     "gulp-sass": "^5.0.0",
     "gulp4-run-sequence": "^1.0.1",
-    "node-sass": "^6.0.1"
+    "node-sass": "^6.0.1",
+    "glob-parent": ">=5.1.2"
   }
 }
