--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
   ],
   "require": {
     "php": "^7.4||^8.0",
-    "nesbot/carbon": "~2.5",
+    "nesbot/carbon": "^2.53",
     "8fold/php-filesystem": "^0.5.0"
   },
   "require-dev": {
