--- a/composer.json
+++ b/composer.json
@@ -10,13 +10,16 @@
     }
   ],
   "require": {
-    "php": "^7.0|^8.0",
-    "8fold/php-shoop-shelf": "~0.8.4",
-    "8fold/php-markup": "~0.5",
-    "nesbot/carbon": "~2.5"
+    "php": "^7.4||^8.0",
+    "nesbot/carbon": "^2.53",
+    "8fold/php-filesystem": "^0.5.0",
+    "8fold/php-html-builder": "^0.5.1"
   },
   "require-dev": {
-    "phpunit/phpunit": "~9.1"
+    "squizlabs/php_codesniffer": "^3.6",
+    "phpstan/phpstan": "^0.12",
+    "pestphp/pest": "^1.20",
+    "psr/log": "^1.0.1"
   },
   "autoload": {
     "psr-4": {
@@ -25,12 +28,17 @@
   },
   "autoload-dev": {
     "psr-4": {
-      "Eightfold\\Events\\Tests\\": "./tests/",
-      "Eightfold\\Foldable\\Tests\\": "./vendor/8fold/php-foldable/tests/"
     }
   },
   "config": {
     "preferred-install": "dist"
   },
-  "prefer-stable": true
+  "prefer-stable": true,
+  "scripts": {
+    "prod": "@production",
+    "production": ["@style", "@stan", "@test"],
+    "style": "./vendor/bin/phpcs --standard=phpcs.xml -p ./src",
+    "stan": "./vendor/bin/phpstan analyze",
+    "test": "./vendor/bin/pest"
+  }
 }
