--- a/package.json
+++ b/package.json
@@ -3,13 +3,12 @@
     "production": "gulp default"
   },
   "devDependencies": {
+    "glob-parent": ">=5.1.2",
     "gulp": "^4.0.2",
     "gulp-cli": "^2.3.0",
+    "gulp-dart-sass": "^1.0.2",
     "gulp-minify": "^3.1.0",
-    "gulp-sass": "^5.0.0",
     "gulp4-run-sequence": "^1.0.1",
-    "node-sass": "^6.0.1",
-    "glob-parent": ">=5.1.2",
     "tar": ">=6.1.2"
   }
 }
