--- a/composer.json
+++ b/composer.json
@@ -12,9 +12,9 @@
   "require": {
     "php": "^7.4||^8.0",
     "nesbot/carbon": "^2.53",
-    "8fold/php-filesystem": "^0.5.0",
-    "8fold/php-html-builder": "^0.5.1",
-    "8fold/commonmark-fluent-markdown": "^0.9.0"
+    "8fold/php-filesystem": "*",
+    "8fold/php-html-builder": "*",
+    "8fold/commonmark-fluent-markdown": "*"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^3.6",
