--- a/composer.json
+++ b/composer.json
@@ -12,9 +12,9 @@
   "require": {
     "php": "^7.4||^8.0",
     "nesbot/carbon": "^2.53",
-    "8fold/php-filesystem": "*",
-    "8fold/php-html-builder": "*",
-    "8fold/commonmark-fluent-markdown": "*"
+    "8fold/php-filesystem": "^0.7.1",
+    "8fold/php-html-builder": "^1.0",
+    "8fold/commonmark-fluent-markdown": "^0.10.8"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^3.6",
