--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
     "php": "^7.4||^8.0",
     "8fold/php-filesystem": "^0.7.1",
     "8fold/php-html-builder": "^1.0",
-    "8fold/commonmark-fluent-markdown": "^0.10.8"
+    "8fold/commonmark-fluent-markdown": "^0.10.8",
+    "symfony/finder": "^6.0"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^3.6",
