--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     }
   ],
   "require": {
-    "php": "^7.4||^8.0",
+    "php": "^8.0",
     "8fold/php-filesystem": "^0.7.1",
     "8fold/php-html-builder": "^1.0",
     "8fold/commonmark-fluent-markdown": "^0.10.8",
