--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,10 @@
     "php": "^8.0",
     "8fold/php-html-builder": "^1.0",
     "8fold/commonmark-fluent-markdown": "^0.10",
-    "symfony/finder": "^6.0"
+    "symfony/finder": "^6.0",
+    "nyholm/psr7": "^1.4",
+    "nyholm/psr7-server": "^1.0",
+    "laminas/laminas-httphandlerrunner": "^2.1"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^3.6",
